force-app/main/default/objects/Mentorship__c/Mentorship__c.object-meta.xml
<CustomObject>
    <label>Mentorship</label>
    <nameField>
        <label>Mentorship</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentorships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>