force-app/main/default/objects/Mentorship__c/fields/MenteeId__c.field-meta.xml
<CustomField>
    <fullName>MenteeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mentorships (MenteeId)</relationshipLabel>
    <relationshipName>Mentorships1</relationshipName>
    <type>Lookup</type>
</CustomField>