force-app/main/default/objects/Mentorship__c/fields/Mentor_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Acceptance__c</fullName>
    <label>Mentor Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>