force-app/main/default/objects/Mentorship__c/fields/Mentor_Skill_Rating__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Skill_Rating__c</fullName>
    <label>Mentor Skill Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>