force-app/main/default/objects/Mentorship__c/fields/Mentor_Skills__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Skills__c</fullName>
    <label>Mentor Skills</label>
    <referenceTo>MentorSkills__c</referenceTo>
    <relationshipLabel>Mentorships (Mentor Skills)</relationshipLabel>
    <relationshipName>Mentorships1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>