force-app/main/default/objects/Mentorship__c/fields/MentorId__c.field-meta.xml
<CustomField>
    <fullName>MentorId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Mentorships</relationshipLabel>
    <relationshipName>Mentorships</relationshipName>
    <type>Lookup</type>
</CustomField>