force-app/main/default/objects/Mentorship__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentorship Program</label>
    <referenceTo>Mentorship_Program__c</referenceTo>
    <relationshipLabel>Mentorships</relationshipLabel>
    <relationshipName>Mentorships</relationshipName>
    <type>Lookup</type>
</CustomField>