force-app/main/default/objects/Mentorship__c/fields/Request_Message__c.field-meta.xml
<CustomField>
    <fullName>Request_Message__c</fullName>
    <label>Request Message</label>
    <type>TextArea</type>
</CustomField>